# target-teradata

./: LICENSE  README.md  meltano.yml  pyproject.toml
target_teradata/: __init__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
