[tool.poetry]
name = "target-teradata"
version = "0.0.1"
description = "`target-teradata` is a Singer target for Teradata, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Matthias Gey <Matthias.Gey@Teradata.com>"]
keywords = [
    "ELT",
    "Teradata",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = "^0.33.1"
fs-s3fs = { version = "^1.1.1", optional = true }
teradatasqlalchemy = "^17.20.0.0"
teradatasql = "^17.20.0.29"
teradataml = "^17.20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
singer-sdk = { version="*", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.group.dev.dependencies]
teradatasqlalchemy = "^17.20.0.0"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_teradata"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_teradata"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-teradata = 'target_teradata.target:TargetTeradata.cli'
